booq/frontend/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: booq-ui
  labels:
    app: booq-ui

spec:
  selector:
    matchLabels:
      app: booq-ui
  template:
    metadata:
      labels:
        app: booq-ui
    spec:
      nodeSelector:
        kubernetes.io/hostname: las211.tokyotech.org
      containers:
        - name: booq-ui
          image: ghcr.io/traptitech/booq-ui:2.1.3
          ports:
            - containerPort: 80
          resources:
            requests:
              cpu: "10m"
              memory: "32Mi"
            limits:
              cpu: "100m"
              memory: "64Mi"
