booq/frontend/ingress-route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: booq-frontend-ingressroute

spec:
  entryPoints:
    - websecure
  tls:
    secretName: booq-tls
  routes:
    - match: Host(`booq.trap.jp`)
      middlewares:
        - name: auth-trap-jp-hard
          namespace: auth
      services:
        - kind: Service
          name: booq-ui-service
          port: 80
          scheme: http
